test/compiler_errors/invalid-target.lzx
<canvas>
<text>
<a href="home" target="_invalid">1</a>
<a href="home" target="10">2</a>
<a href="home" target="">3</a>
<a href="home" target="#abc">4</a>
<a href="home" target="abc#def">5</a>
</text>
<!-- * X_LZ_COPYRIGHT_BEGIN ***************************************************
* Copyright 2001-2004 Laszlo Systems, Inc.  All Rights Reserved.              *
* Use is subject to license terms.                                            *
* X_LZ_COPYRIGHT_END ****************************************************** -->
</canvas>
